# ALFRED_jira_task_creator

./: .env.example  pyproject.toml
src/: bot.py  config.py  user_store.py
src/graph/: jira_client.py  llm.py  nodes.py  state.py  workflow.py
