[project]
name = "discord-jira-automation"
version = "0.1.0"
description = "Create Jira tasks from Discord with LangGraph-orchestrated preview/approval"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.4",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "langchain-google-genai>=2.0",
]

